--- a/yawuplus.github.io/blog/_config.yml
+++ b/yawuplus.github.io/blog/_config.yml
@@ -30,6 +30,7 @@ i18n_dir: :lang
 skip_render: 
   - about/*
   # -bookmark/*
+  - baidu_verify_Wo5mh3ARU8.html
 
 # Writing
 new_post_name: :title.md # File name of new posts
