--- a/yawuplus.github.io/blog/package.json
+++ b/yawuplus.github.io/blog/package.json
@@ -22,5 +22,9 @@
     "hexo-server": "^0.3.3",
     "hexo-tag-dplayer": "^0.3.3",
     "hexo-wordcount": "^6.0.1"
+  },
+  "devDependencies": {
+    "hexo-generator-baidu-sitemap": "^0.1.6",
+    "hexo-generator-sitemap": "^1.2.0"
   }
 }
