--- a/yawuplus.github.io/blog/package.json
+++ b/yawuplus.github.io/blog/package.json
@@ -6,6 +6,9 @@
     "version": "3.9.0"
   },
   "dependencies": {
+    "acorn": "^6.3.0",
+    "ajv": "^6.10.2",
+    "eslint": "^6.6.0",
     "hexo": "^3.9.0",
     "hexo-admin": "^2.3.0",
     "hexo-asset-image": "git+https://github.com/7ym0n/hexo-asset-image.git",
@@ -22,7 +25,8 @@
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
     "hexo-tag-dplayer": "^0.3.3",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-wordcount": "^6.0.1",
+    "webpack": "^4.41.2"
   },
   "devDependencies": {
     "hexo-generator-baidu-sitemap": "^0.1.6",
