--- a/yawuplus.github.io/blog/_config.yml
+++ b/yawuplus.github.io/blog/_config.yml
@@ -109,6 +109,7 @@ deploy:
       git: git@github.com:yawuplus/yawuplus.github.io.git
       # coding: git@git.coding.net:qiyuplus/blog.git
   branch: master
+  #type: baidu_url_submitter
 
 plugins:
     hexo-generator-feed
@@ -207,3 +208,8 @@ sitemap:
 baidusitemap:
     path: baidusitemap.xml
 baidu_tongji: true
+baidu_url_submit:
+    count: 100 ## 提交最新的一个链接
+    host: www.yawujia.cn  ## 在百度站长平台中注册的域名
+    token: vf3FIWQ9L8y4B6qj  ## 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+    path: baidu_urls.txt ## 文本文档的地址， 新链接会保存在此文本文档里
