--- a/yawuplus.github.io/blog/package.json
+++ b/yawuplus.github.io/blog/package.json
@@ -12,6 +12,7 @@
     "hexo": "^3.9.0",
     "hexo-admin": "^2.3.0",
     "hexo-asset-image": "git+https://github.com/7ym0n/hexo-asset-image.git",
+    "hexo-baidu-url-submit": "0.0.6",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
