--- a/yawuplus.github.io/blog/package.json
+++ b/yawuplus.github.io/blog/package.json
@@ -19,6 +19,7 @@
     "hexo-generator-feed": "^2.0.0",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-json-content": "^4.1.6",
+    "hexo-generator-searchdb": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-pdf": "^1.1.1",
     "hexo-renderer-ejs": "^0.3.1",
