--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
         access-key-id: ${{ secrets.ACCESS_KEY_ID }}
         access-key-secret: ${{ secrets.ACCESS_KEY_SECRET }}
     - name: Deploy my blog to aliyun oss
-      run: ossutil cp blog oss://minicloudsky -rf
+      run: ossutil cp blog/public oss://minicloudsky -rf
