--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,5 @@ jobs:
         access-key-id: ${{ secrets.ACCESS_KEY_ID }}
         access-key-secret: ${{ secrets.ACCESS_KEY_SECRET }}
     - name: Deploy my blog to aliyun oss
-      run: ls
-           pwd
-           ossutil cp blog/public oss://minicloudsky -rf
+      run: 
+           ls && pwd && ossutil cp blog/public oss://minicloudsky -rf
