--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         cd blog
         npm install
         npm install -g hexo-cli
+        npm ls --depth 0
         hexo generate
         cd ..
     - uses: manyuanrong/setup-ossutil@v1.0
