--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         cd blog
         npm install
         npm install -g hexo-cli
+        npm install -g hexo hexo-deployer-git  hexo-generator-archive hexo-generator-category hexo-generator-index  hexo-generator-searchdb hexo-generator-tag hexo-renderer-ejs hexo-renderer-marked hexo-renderer-stylus hexo-server hexo-wordcount
         npm ls --depth 0
         hexo generate
         cd ..
