--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         npm install -g hexo-cli
         npm install -g hexo hexo-deployer-git  hexo-generator-archive hexo-generator-category hexo-generator-index  hexo-generator-searchdb hexo-generator-tag hexo-renderer-ejs hexo-renderer-marked hexo-renderer-stylus hexo-server hexo-wordcount
         npm ls --depth 0
+        git clone https://github.com/iissnan/hexo-theme-next themes/next
         hexo generate
         cd ..
     - uses: manyuanrong/setup-ossutil@v1.0
