--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -116,3 +116,22 @@ deploy:
       git: git@github.com:minicloudsky/minicloudsky.github.io.git
   branch: master
 
+
+jsonContent:
+    meta: false
+    pages: false
+    posts:
+        title: true
+        date: true
+        path: true
+        text: false
+        raw: false
+        content: false
+        slug: false
+        updated: false
+        comments: false
+        link: false
+        permalink: false
+        excerpt: false
+        categories: false
+        tags: true
