--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -114,6 +114,7 @@ deploy:
   type: git
   repo:
       git: git@github.com:minicloudsky/minicloudsky.github.io.git
+      gitee:https://gitee.com/minicloudsky/minicloudsky.git
   branch: master
 
 
