--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,6 +33,6 @@ jobs:
         endpoint: "oss-cn-shenzhen.aliyuncs.com" 
         access-key-id: ${{ secrets.ACCESS_KEY_ID }}
         access-key-secret: ${{ secrets.ACCESS_KEY_SECRET }}
-    - name: Deploy my blog to aliyun oss
+    - name: 部署hexo yilia博客到阿里云oss
       run: 
           ossutil cp blog/public oss://minicloudsky -rf
