--- a/blog/package.json
+++ b/blog/package.json
@@ -12,6 +12,7 @@
     "version": "4.2.1"
   },
   "dependencies": {
+    "gitment": "0.0.3",
     "hexo": "^4.2.1",
     "hexo-asset-image": "^1.0.0",
     "hexo-cli": "^3.1.0",
