--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -118,6 +118,7 @@ deploy:
   type: git
   repo:
       git: git@github.com:minicloudsky/minicloudsky.github.io.git
+      gitee: git@gitee.com:minicloudsky/minicloudsky.git
   branch: master
 
 
