--- a/blog/package.json
+++ b/blog/package.json
@@ -9,24 +9,25 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.2.1"
+    "version": "6.0.0"
   },
   "dependencies": {
     "gitment": "0.0.3",
-    "hexo": "^4.2.1",
+    "hexo": "^6.0.0",
     "hexo-asset-image": "^1.0.0",
-    "hexo-cli": "^3.1.0",
-    "hexo-deployer-git": "^2.1.0",
+    "hexo-cli": "^4.3.0",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
-    "hexo-generator-index": "^1.0.0",
+    "hexo-generator-index": "^2.0.0",
     "hexo-generator-json-content": "^4.2.3",
-    "hexo-generator-searchdb": "^1.2.0",
+    "hexo-generator-searchdb": "^1.4.0",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^2.0.0",
-    "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^5.0.0",
+    "hexo-renderer-stylus": "^2.1.0",
+    "hexo-server": "^3.0.0",
+    "hexo-wordcount": "^6.0.1",
+    "nvm": "0.0.4"
   }
 }
