--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -13,7 +13,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://www.yawujia.cn
+url: http://minicloudsky.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -118,7 +118,7 @@ deploy:
   type: git
   repo:
       git: git@github.com:minicloudsky/minicloudsky.github.io.git
-      gitee: git@gitee.com:minicloudsky/minicloudsky.git
+      # gitee: git@gitee.com:minicloudsky/minicloudsky.git
   branch: master
 
 
